# training-rust

./: .gitignore  Cargo.toml  README.md
src/: cargo_rust_commands.md  casting_shadowing  casting_shadowing.rs  conditions.rs  enumerations.rs  fun_and_pro.rs  generics.rs  geo_map.rs  lib.rs  lifetime.rs  macros  macros.rs  main.rs  ownership_borrowing.rs  primitive.rs  strings.rs  structs_traits_impl.rs  tuples.rs
src/rust 3d demo/: Cargo.toml  index.html  index.js  package-lock.json
src/rust 3d demo/src/: app_state.rs  common_funcs.rs  gl_setup.rs  lib.rs
src/rust 3d demo/src/programs/: color_2d.rs  color_2d_gradient.rs  mod.rs
src/rust 3d demo/src/shaders/: mod.rs
src/rust 3d demo/src/shaders/fragment/: color_2d.rs  color_2d_gradient.rs
src/rust 3d demo/src/shaders/vertex/: color_2d.rs  color_2d_gradient.rs  mod.rs
